Removed an address for a store that has now gone fully online, also fixed an issue where an image was overflowing on the press page on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -285,4 +285,4 @@ nav ul {
 
 .item-image {
   width: auto;
-  max-width: 1000px; }
+  max-width: 100%; }
