--- a/assets/scss/_press.scss
+++ b/assets/scss/_press.scss
@@ -14,5 +14,5 @@
 
 .item-image {
   width: auto;
-  max-width: 1000px;
+  max-width: 100%;
 }
